Implemented account verification & added new DTOs, configs, and exception handlers